# movie-guru-adk

./: .gitignore  README.md
a2atest/: pyproject.toml  reasoning.py
a2atest/app/: agent.py
movie-chatbot/: .dockerignore  Dockerfile  Makefile  index.html  package-lock.json  package.json  server.js  vite.config.js
movie-chatbot/src/: App.vue  main.js  style.css  tracer.js
movie-guru-agent/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
movie-guru-agent/app/: __init__.py  agent.py  agent_engine_app.py  server.py
movie-guru-agent/app/utils/: appmetadata.py  context.py  envvars.py  gcs.py  logging.py  model.py  model_armor.py  tracing.py  typing.py
movie-guru-agent/deployment/cd/: dev-agentengine.yaml  dev-cloudrun.yaml
movie-guru-agent/deployment/data/: Dockerfile  main.py  requirements.txt
movie-guru-agent/deployment/terraform/: apis.tf  ar.tf  backend.tf  dns.tf  endpoints.tf  gcs.tf  job.tf  networking.tf  providers.tf  psc.tf  sa.tf  variables.tf
movie-guru-agent/ollama/: Dockerfile
movie-guru-ax-subagent/: .requirements.txt  Dockerfile  Makefile  README.md  __main__.py  agent_config.py  agent_engine_app.py  agent_executor.py  deployment_metadata.json  model.py  prompt.py  pyproject.toml  requirements.txt  send_metrics.py
movie-guru-loadgen/: Dockerfile  Makefile  go.mod  go.sum  main.go
movie-guru-tools/: .gcloudignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
movie-guru-tools/app/: server.py
movie-guru-tools/deployment/cd/: dev-cloudrun.yaml
ollama/: Makefile
(+5 files in other folders)
