[project]
name = "movie-guru-ax-subagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[agent_engines,a2a,event-actions,litellm]>=1.17.0",
    "a2a-sdk>=0.3.9",
    "click>=8.3.0",
    "litellm>=1.78.6",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-instrumentation-starlette>=0.58b0",
]
